[Mac] .webkitClosedCaptionsVisible doesn't work with "Automatic" caption mode https://bugs.webkit.org/show_bug.cgi?id=118319

Reviewed by Darin Adler.

Source/WebCore:

Test: media/track/track-legacyapi-with-automatic-mode.html

* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::textTrackSelectionScore): Don't apply "automatic"
    logic when captions were enabled with .webkitClosedCaptionsVisible.

LayoutTests:

* media/track/track-legacyapi-with-automatic-mode-expected.txt: Added.
* media/track/track-legacyapi-with-automatic-mode.html: Added.


Canonical link: https://commits.webkit.org/136332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152318 268f45cc-cd09-0410-ab3c-d52691b4dbfc